@@ -1,3 +1,8 @@
+2008-05-25  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c (on_playlist_change_name): Remove unused variables,
+	spotted by Philip Withnall <pwithnall@svn.gnome.org>
+
 2008-05-24  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-playlist.c (init_treeview),
